changelog for ephFrame
----------------------

2009-06-25
+ fixed missing created update field when inserting new model entries with multiple behaviors
+ added theming, which includes js/css search in theme directory
+ fixed js packer to append line-feed at end of packed js files
+ added after[Action] and before[Action] callbacks in the controller
+ added subversion keywords and new formatted copyright message on every file
+ SGMLAttributes don’t render attributes with empty values anymore
+ DBDSN in db.php can be an array, enabling socket connections with it
+ missing afterAction callback for controller added (called after components)
+ empty cookie values return false now
+ fixed object->__mergeParentProperty to merge correctly using ->{$varname}

2009-05-25
+ added model behaviors callable from every model
+ controller actions can return false to render 404 page
+ added NestedSetBehavior, FlagableBehavior and PositionableBehavior
+ added Form Field Classes and Form with configure
+ Log Levels now used correctly
+ Model can return random sets
+ Model can return simple list of fields from table
+ Model->findBy supports depth parameter
+ Model query class caches query and results
+ Model can now unbind and bind other models on the fly
+ Image->stretchResizeTo fixed
+ javascript and css component can include files from http://...
+ optimized model - bind, create methods
+ added CURL and Scraper Class
+ app/config/paths.php included before frameworks paths.php
+ Routes reusable with their names and parameters

2008-10-26
+ changed the controller order actions to create components again
+ created ModelStructureCache to handle the save and load stuff of a model (refactoring)
+ modelfieldinfo now stores length (also float) and types correctly
+ router copies same route names data from allready existing routes
+ view renders all variables (to sad that the Hash seemes to have a bug on foreach sometimes?)