@@ -97,10 +97,9 @@ class CSSPacker extends Component {
 	 */
 	public function packAndStore(Array $files, $targetDir) {
 		assert(!empty($targetDir));
-		$packedFilename = $this->packedFilename($files);
-		$compressed = $this->pack($files);
-		file_put_contents($targetDir.$packedFilename, $compressed);
-		return $packedFilename;
+		$dir = new Dir($targetDir);
+		$packedFile = $dir->newFile($this->packedFilename($files), $this->pack($files));
+		return $packedFile->basename();
 	}
 	
 	/**
@@ -153,7 +152,7 @@ class CSSPacker extends Component {
 	 * 	@return string
 	 */
 	public function packedFilename(Array $files = array()) {
-		$md5Filenames = md5(implode('', array_map('basename', $files)));
+		$md5Filenames = substr(md5(implode('', array_map('basename', $files))), 0, 8);
 		$compressedFileName = $this->packedPrefix.$md5Filenames.'.'.$this->packedExtension;
 		$compressedFileName = str_replace('/[^-_A-Za-z0-9\./', '', $compressedFileName);
 		return $compressedFileName;
