@@ -1,7 +1,7 @@
 changelog for ephFrame
 ----------------------
 
-2009-06-25
+2009-07-07
 + fixed missing created update field when inserting new model entries with multiple behaviors
 + added theming, which includes js/css search in theme directory
 + fixed js packer to append line-feed at end of packed js files
@@ -12,6 +12,11 @@ changelog for ephFrame
 + missing afterAction callback for controller added (called after components)
 + empty cookie values return false now
 + fixed object->__mergeParentProperty to merge correctly using ->{$varname}
++ File->basename(true) will return with extension and false without extension
++ Dir->newFile can create new Files on the fly
++ CSS/JS Packer use Dir class to create Packed files now
++ added default view for missingtable error message
++ form->configure uses varchar length from model fields as maxLength for input fields
 
 2009-05-25
 + added model behaviors callable from every model
